--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" />
+    <meta http-equiv="refresh" content="0; URL='https://twitter.com/tweetaudun'" />
     <title>redirecting to twitter</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://twitter.com/tweetaudun"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174294578-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
