back to old link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://discord.gg/vJPCWsh'" />
+    <meta http-equiv="refresh" content="0; URL='https://twitter.com/tryminecraftgg/status/1290522805851824128'" />
     <title>redirecting to discord</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174294578-1"></script>
