no more rickroll, got death threats

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta
     http-equiv="refresh"
-    content="0; URL='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"
+    content="0; URL='https://twitter.com/tweetaudun/status/1290111787937890305'"
   />
   <title>redirecting to twitter</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
