--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=UA-174294578-1"
+    src="https://www.googletagmanager.com/gtag/js?id=G-0XZCN2J127"
   ></script>
   <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
   <script>
@@ -15,7 +15,7 @@
     }
     gtag('js', new Date());
 
-    gtag('config', 'UA-174294578-1');
+    gtag('config', 'G-0XZCN2J127');
 
     function copyText() {
       var copyText = document.getElementById('server');
